Jusqu'à ajouter commentaire

--- a/app/views/gossips/index.html.erb
+++ b/app/views/gossips/index.html.erb
@@ -15,7 +15,7 @@
 			<% @list_gossips.each do |g| %> 
 			<tr>
 		      <td><%=g.content%></td>
-		      <td><a href=<%= gossip_path(g.id) %> class="btn btn-primary" role="button">Show this gossip</a></td>
+		      <td><a href=<%= gossip_path(g.id) %> class="btn btn-primary" role="button">Show</a></td>
 		    </tr>
 		    <% end%>
 		  </tbody>
