--- a/app/views/gossips/edit.html.erb
+++ b/app/views/gossips/edit.html.erb
@@ -1,20 +1,10 @@
 <h1> User's edit page</h1>
 
+<!-- On utilise les form for pour plus de practicité, avec la variable d'instance @g que l'on appelle dans le controller
+	De cette façon, il remplie les input avec la valeur persistée -->
 <div>
-	<%= form_for @g do |f| %>
-		<div class="form-group">
-			<label> Author : </label>
-			<%= f.text_field :anonymous_author %>
-		</div>
-		<div class="form-group">
-			<label> Content : </label>
-			<%= f.text_field :content %>
-		</div>
-		<div class="form-group">
-			<button type:"submit" class="btn btn-primary"> Submit </label>
-		</div>
-
-	<% end %>
-
-	<span class="btn btn-danger"><%= link_to "Delete", gossip_path, method: :delete %></span>
+	<!-- Etant donné que l'on utilise le même formulaire dans new et edit, on utilise un partial pour créer le formulaire et on l'appelle avec render -->
+	<%= render "gossips/form" %>
+	<!-- On rajoute ensuite le bouton delete, spécifique à la page edit -->
+	<%= link_to "Delete", gossip_path, data: {method: :delete, confirm: "Are you sur ?"}, class: "btn btn-danger"  %>
 </div>
