--- a/app/views/gossips/new.html.erb
+++ b/app/views/gossips/new.html.erb
@@ -1,18 +1,6 @@
 <h1>You're on the create page of gossip</h1>
 <br/>
 <div>
-	<%= form_for @g do |f| %>
-		<div class="form-group">
-			<label> Author : </label>
-			<%= f.text_field :anonymous_author %>
-		</div>
-		<div class="form-group">
-			<label> Content : </label>
-			<%= f.text_field :content %>
-		</div>
-		<div class="form-group">
-			<button type:"submit" class="btn btn-primary"> Submit </label>
-		</div>
-
-	<% end %>
+	<!-- Etant donné que l'on utilise le même formulaire dans new et edit, on utilise un partial pour créer le formulaire et on l'appelle avec render -->
+	<%= render "gossips/form" %>
 </div>
