--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -1,4 +1,16 @@
-<h3> User's page</h3>
+<h1> User's page</h1>
 <p> The name : <%= @g.anonymous_author %></p> 
 <p> The gossip : <%= @g.content %> </p>
-<a href=<%= edit_gossip_path(@g.id) %> class="btn btn-primary" role="button">Edit</a>
+<p><a href=<%= edit_gossip_path(@g.id) %> class="btn btn-primary" role="button">Edit</a></p>
+
+<p> Comments : </p>
+<% unless @g.comments.count == 0
+	i = 0
+	@g.comments.each do |c| 
+		i += 1%>
+	<p> Comments <%=i%> : <br/>
+		<%= c.body %> <br/>
+	<% end 
+	end%>
+<p> Ajouter un commentaire : </p>
+<%= render 'comments/form' %>
