--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,15 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="container">
-    <nav>
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Gossips",   gossips_path %></li>
-        <li><%= link_to "New gossip", new_gossip_path %></li>
-      </ul>
-    </nav>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">The hacking gossip</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <%= link_to "Home", root_path, class: "nav-item nav-link" %>
+      <%= link_to "Gossips",   gossips_path, class: "nav-item nav-link" %>
+      <%= link_to "New gossip", new_gossip_path, class: "nav-item nav-link" %>
+    </div>
   </div>
+  </nav>
 </header>
