--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,10 +1,8 @@
-<h1> User's edit page</h1>
-
-<!-- On utilise les form for pour plus de practicité, avec la variable d'instance @g que l'on appelle dans le controller
+<!-- On utilise les form for pour plus de practicité, avec la variable d'instance @c que l'on appelle dans le controller
 	De cette façon, il remplie les input avec la valeur persistée -->
 <div>
 	<!-- Etant donné que l'on utilise le même formulaire dans new et edit, on utilise un partial pour créer le formulaire et on l'appelle avec render -->
-	<%= render "gossips/form" %>
+	<%= render "comments/form" %>
 	<!-- On rajoute ensuite le bouton delete, spécifique à la page edit -->
-	<%= link_to "Delete", gossip_path, data: {method: :delete, confirm: "Are you sure ?"}, class: "btn btn-danger"  %>
+	<%= link_to "Delete", comment_path, data: {method: :delete, confirm: "Are you sure ?"}, class: "btn btn-danger"  %>
 </div>
